Changed colors of boxes

--- a/spr02/index.html
+++ b/spr02/index.html
@@ -64,33 +64,12 @@
                 <div class="box" id="boxspecial">
                     <table>
                         <tr>
-                            <td></td>
+                            <td class="blue"></td>
                             <td class="hidden"></td>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                    </table>
-                </div>
-            </td>
-            <td>
-                <div class="box" id="boxspecial">
-                    <table>
-                        <tr>
-                            <td class="hidden"></td>
-                            <td></td>
-                            <td class="hidden"></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td class="hidden"></td>
-                            <td></td>
-                            <td class="hidden"></td>
+                            <td class="red"></td>
+                            <td class="orange"></td>
                         </tr>
                     </table>
                 </div>
@@ -99,19 +78,40 @@
                 <div class="box" id="boxspecial">
                     <table>
                         <tr>
-                            <td></td>
                             <td class="hidden"></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td class="hidden"></td>
-                            <td></td>
+                            <td class="red"></td>
                             <td class="hidden"></td>
                         </tr>
                         <tr>
-                            <td></td>
+                            <td class="blue"></td>
+                            <td class="red"></td>
+                            <td class="orange"></td>
+                        </tr>
+                        <tr>
                             <td class="hidden"></td>
-                            <td></td>
+                            <td class="orange"></td>
+                            <td class="hidden"></td>
+                        </tr>
+                    </table>
+                </div>
+            </td>
+            <td>
+                <div class="box" id="boxspecial">
+                    <table>
+                        <tr>
+                            <td class="green"></td>
+                            <td class="hidden"></td>
+                            <td class="orange"></td>
+                        </tr>
+                        <tr>
+                            <td class="hidden"></td>
+                            <td class="blue"></td>
+                            <td class="hidden"></td>
+                        </tr>
+                        <tr>
+                            <td class="green"></td>
+                            <td class="hidden"></td>
+                            <td class="red"></td>
                         </tr>
                     </table>
                 </div>
@@ -122,12 +122,12 @@
                 <div class="box" id="boxspecial">
                     <table>
                         <tr>
-                            <td></td>
-                            <td></td>
+                            <td class="red"></td>
+                            <td class="orange"></td>
                         </tr>
                         <tr>
                             <td class="hidden"></td>
-                            <td></td>
+                            <td class="blue"></td>
                         </tr>
                     </table>
                 </div>
@@ -138,12 +138,12 @@
                         <tr>
                             <td class="hidden"></td>
                             <td class="hidden"></td>
-                            <td></td>
+                            <td class="red"></td>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td class="orange"></td>
+                            <td class="green"></td>
+                            <td class="blue"></td>
                         </tr>
                     </table>
                 </div>
@@ -152,16 +152,16 @@
                 <div class="box" id="boxspecial">
                     <table>
                         <tr>
-                            <td></td>
+                            <td class="orange"></td>
                             <td class="hidden"></td>
                         </tr>
                         <tr>
-                            <td></td>
+                            <td class="blue"></td>
                             <td class="hidden"></td>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
+                            <td class="green"></td>
+                            <td class="red"></td>
                         </tr>
                     </table>
                 </div>
